clusters/KC-Int/deployments/data-collection/prometheus/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  annotations:
    configmap.reloader.stakater.com/reload: "prometheus"
spec:
  replicas: 0
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      securityContext:
        fsGroup: 472
        supplementalGroups:
          - 0
      containers:
        - name: prometheus
          image: prom/prometheus:v2.53.0
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus/"
          resources:
            limits:
              memory: 1Gi
              cpu: 1000m
            requests:
              memory: 100Mi
              cpu: 100m
          volumeMounts:
            - name: config
              mountPath: /etc/prometheus/
            - name: pvc
              mountPath: /prometheus/
        # readinessProbe:
        #   failureThreshold: 3
        #   httpGet:
        #     path: /
        #     port: 9090
        #     scheme: HTTP
        #   initialDelaySeconds: 10
        #   periodSeconds: 30
        #   successThreshold: 1
        #   timeoutSeconds: 2
        # livenessProbe:
        #   failureThreshold: 3
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
        #   successThreshold: 1
        #   tcpSocket:
        #     port: 9090
        #   timeoutSeconds: 1
      volumes:
        - name: config
          secret:
            secretName: prometheus-env
            items:
              - key: prometheus.rules
                path: prometheus.rules
              - key: prometheus.yml
                path: prometheus.yml
        - name: pvc
          persistentVolumeClaim:
            claimName: prometheus
