clusters/KC-Int/deployments/data-collection/prometheus/app/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: prometheus
spec:
    selector:
        app: prometheus
    ports:
        - port: 9090
