clusters/KC-Int/deployments/data-collection/prometheus/app/ingress.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: prometheus
    annotations:
        kubernetes.io/ingress.class: traefik
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:0TOR0XTEoTXQb+ens9moo3SHk7Skt6xlw1+9VyP8,iv:btFWS/BipYjC+uwKIYMbwnAj9sSXAfCmE3DpVWxeBDE=,tag:RlW12W5L3n5H99ah9a5MGQ==,type:str]
          services:
            - kind: Service
              name: prometheus
              port: 9090
    tls:
        secretName: production-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUMjgzVUNLdTJuNnVVcDMv
[...]
            WQ1auqwMehd8K/jMp6g2EUqFIjO2i7ouEWleWNDq6XOAvOJZ/MRa8A==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-22T16:41:42Z"
    mac: ENC[AES256_GCM,data:jQnj/CZL1CdBD0ysUR8T9JRedAihBcWFjt79uMbDgtr1SdQEFdkQlzizLAhj3Mobc8jJi+XQg5qbjJxPR27rOxFj1lGkUPOrtt84iwzAoPVCti9+ecM0XsmWUZo7VyONTaYOgGRy/84q5u8yQ633hu5e2/zXD4Oek9N9Ue7lKog=,iv:3RluUM+ay+AwEKSzU6Ms1LUzyL+kFIJRP/qez2GmP+c=,tag:MBzA4b9NMympL3lKDrlGdg==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|externalName)$
    version: 3.8.1
